fix padding above settings editor when there is no map and fix some small css issues with comments action distorting some other elements when shown

--- a/client/sass/_components.scss
+++ b/client/sass/_components.scss
@@ -232,13 +232,10 @@
   margin: $info-section-margin;
 
   .actions {
-    height: $info-section-height;
     margin-top: -$info-section-padding;
     right: 0em;
-    // top: $info-section-margin;
     font-size: 1em;
     color: black;
-    z-index: 102;
     position: absolute;
     display: none;
 
