--- a/client/sass/app/forms.scss
+++ b/client/sass/app/forms.scss
@@ -28,6 +28,7 @@
   }
 }
 
-.group-editor {
+.group-editor,
+.settings-editor {
   margin-top: 45px;
 }
